2009-01-08  Claude Paroz  <claude@2xlibre.net>

	* stats/models.py: Fixed po_url creation.

2009-01-08  Claude Paroz  <claude@2xlibre.net>

	* settings_sample.py:
	* stats/conf/*: Removed stats custom settings (merged in
	settings_sample.py).
	* stats/models.py:
	* stats/utils.py:
	* stats/views.py:
	* languages/views.py:
	* urls.py:
	* README: Removed references to stats/conf/settings.py.

2009-01-08  Stéphane Raimbault  <stephane.raimbault@gmail.com>

	* stats/management/commands/update-trans.py: Use ANSI_QUOTES with
	MySQL to not break the SQL compatibility.

2009-01-08  Stéphane Raimbault  <stephane.raimbault@gmail.com>

	* templates/base.html: Revert to 'Log out' as Django.

2009-01-08  Claude Paroz  <claude@2xlibre.net>

	* stats/models.py: Use utils.url_join to create URLs. Make bugs_component
	optional.
	Fixes bugs #566960, #566961.
	* stats/utils.py: Add new url_join utility function.
	* templates/vertimus/vertimus_detail.html: Show doc images icon next to
	the string stats.

2009-01-07  Claude Paroz  <claude@2xlibre.net>

	* stats/utils.py: msgfmt outputs stats on stderr.
	Fixes bug #566934.

2009-01-07  Claude Paroz  <claude@2xlibre.net>

	* stats/models.py: Prevent a division by 0 in stats percentage computing.

2009-01-07  Claude Paroz  <claude@2xlibre.net>

	* stats/models.py:
	* stats/utils.py: Don't mix stdout with stderr, return separate variables.

2009-01-06  Claude Paroz  <claude@2xlibre.net>

	* media/css/main.css:
	* templates/people/person_overview.html: Make all text align to the right
	of the image.
	* vertimus/models.py: Fixed get_name which is a function call, not a
	property.

2009-01-05  Andre Klapper  <a9016009@gmx.de>

	* people/models.py:
	* templates/register.html:
	Fixed two typos.

2009-01-05  Claude Paroz  <claude@2xlibre.net>

	* vertimus/models.py: Fix error state -> old_state. Improve translation
	and mail layout.

2009-01-05  Claude Paroz  <claude@2xlibre.net>
