@@ -1,3 +1,8 @@
+2009-01-08  Stéphane Raimbault  <stephane.raimbault@gmail.com>
+
+	* stats/management/commands/update-trans.py: Removed reference to
+	stats/conf/settings.py
+
 2009-01-08  Claude Paroz  <claude@2xlibre.net>
 
 	* stats/models.py: Fixed po_url creation.
